# NeuralNetwork_C

C_version/: .gitignore  CMakeLists.txt  main.c  matrix_operations.c  matrix_operations.h  statistical_random.c  statistical_random.h
C_version/data/: DAO.c  DAO.h  bin_writers.c  bin_writers.h  save_nn.c  save_nn.h
C_version/math/: matrix_operations.c  matrix_operations.h  statistical_random.c  statistical_random.h
C_version/neural_network/: activation_functions.c  activation_functions.h  learning_rates.c  learning_rates.h  losses.c  losses.h  network_activation_functions.c  network_activation_functions.h  neural_network.c  neural_network.h  neural_structs.h  optimizers.c  optimizers.h  regularization_params.c  regularization_params.h
C_version/neural_network/Optimizers/: Adam_future_view_optimizer.c  Adam_future_view_optimizer.h  Adam_optimizer.c  Adam_optimizer.h  Nesterov_accelerated_gd.c  Nesterov_accelerated_gd.h  SGD.c  SGD.h  momentum_optimizer.c  momentum_optimizer.h  optimizers_functions.c  optimizers_functions.h
C_version/neural_network/activation_functions/: activation_functions.c  activation_functions.h  network_activation_functions.c  network_activation_functions.h
C_version/neural_network/regularization/: losses.c  losses.h  regularization_params.c  regularization_params.h
C_version/neural_network/weight_initialize/: weight_initializers.c  weight_initializers.h
C_version/terminal_output/: progres_bar.c  progres_bar.h
C_version/test/: main_tests.c  main_tests.h
